--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <figure class="logo">
             <img src="images/logo.png" alt="logo">
         </figure>
@@ -25,11 +25,11 @@
         </nav>
     </header>
 
-    <main class="carousel">
+    <main class="cart-carousel">
         <ul id="cart-items">
             <!-- Les produits seront ajoutés ici par JavaScript -->
         </ul>
-        <div id="total" style="position: absolute; left: 67.7%; top: 67.7%; transform: translate(-50%, -50%);">
+        <div id="total">
             <!-- Element pour afficher le total -->
         </div>
     </main>
@@ -105,6 +105,8 @@
         }
 
     </script>
+        <script src="js/header.js"></script>
+
     
 </body>
 
