--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <figure class="logo">
             <img src="images/logo.png" alt="logo">
         </figure>
@@ -121,12 +121,14 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Mon E-commerce. Tous droits réservés.</p>
+        <p style="font-size: small;">&copy; 2024 Mon E-commerce. Tous droits réservés.</p>
     </footer>
 
     
     <script src="js/main.js"></script>
     <script src="js/styles.js"></script>
+    <script src="js/header.js"></script>
+
 
 </body>
 
