--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <figure class="logo">
             <a href="index.html"><img src="images/logo.png" alt="logo"></a>
         </figure>
@@ -53,6 +53,8 @@
     </script>
     <script src="js/main.js"></script>
     <script src="js/products.js"></script>
+    <script src="js/header.js"></script>
+    
 </body>
 
 </html>
